# simple_ai

./: .gitignore  CMakeLists.txt  README.md
dockerfiles/: Dockerfile.simple_ai  docker-compose.yml
docs/: 3_setup_tvm.md
include/backend/: backend_executor.h
include/backend/tvm/: common_defines.h
include/common/: common.h  hash_combine.h
include/framework/: allocator.h  allocator_cpu.h  allocator_manager.h  allocator_stats.h  common_defines.h  device.h  memory_info.h
include/io/: onnx_serializer.h
include/ir/: graph.h  model.h  node.h  node_arg.h  node_attribute.h  node_shape_manager.h  node_utils.h  tensor.h  tensor_shape.h
include/ir/node_shapes/: add_shape.h  conv_shape.h  flatten_shape.h  gemm_shape.h  global_avg_pool_shape.h  max_pool_shape.h  relu_shape.h
include/utils/: logger.h  msg_queue.h  utils.h
include/utils/thread_pool/: thread_context.h  thread_pool.h
scripts/: generate_onnx_source.sh
src/backend/: CMakeLists.txt  backend_executor.cpp
src/backend/tvm/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp
src/framework/: CMakeLists.txt  allocator.cpp  allocator_cpu.cpp  allocator_manager.cpp
src/io/: CMakeLists.txt  onnx_serializer.cpp
src/ir/: CMakeLists.txt  graph.cpp  model.cpp  node.cpp  node_arg.cpp  node_attribute.cpp  node_shape_manager.cpp  tensor.cpp  tensor_shape.cpp
src/ir/node_shapes/: add_shape.cpp  conv_shape.cpp  flatten_shape.cpp  gemm_shape.cpp  global_avg_pool_shape.cpp  max_pool_shape.cpp  relu_shape.cpp
src/onnx_proto/: CMakeLists.txt
src/utils/: CMakeLists.txt  logger.cpp  utils.cpp
tests/: CMakeLists.txt
tests/common/: test_common.cpp
tests/ir/: test_ir.cpp
tests/utils/: test_logger.cpp  test_utils.cpp
